# vrutkovs.github.io

./: .gitignore  Makefile-integration.am  Makefile-ostbuild.am  Makefile-tests.am  Makefile.am  README-build.md  TODO  app.css  app.js  configure.ac  controllers.js  gnome-continuous.doap  gnome-ostree.doap  gnomeos-3.6.json  index.html  manifest.json
extras/build.gnome.org/: app.css  app.js  build.gnome.org.js  controllers.js  gnome-ostree.js  index.html
extras/build.gnome.org/partials/: gnome-continuous-build.html  gnome-continuous-log.html  gnome-continuous-screenshots.html  gnome-continuous.html  home.html  jhbuild-ubuntu-raring.html
extras/ircbot/: bot.py
extras/repoweb/: index.html  repoweb.js
extras/supybot/GNOMEOSTree/: config.py  plugin.py
install/: amazon-linux-cloud-init.sh  gnome-continuous.modules  ostree-user-install.sh  ostree.modules
ostbuild/pyostbuild/: builtin_build.py
partials/: gnome-continuous-build.html
patches/: ConsoleKit-Add-legacy-pam-foreground-compat.ck-to-enable-var-ru.patch  MM-builddir-include.patch  ModemManager-headers.patch  WebKit-build-Don-t-break-on-deprecations.patch  WebKit-gtk2xtbin-Don-t-use-deprecated-GDK_THREADS_ENTER-mac.patch  behave-buildsys.patch  bluez-disable-docs.patch  colord-builddir-2.patch  colord-disable-private-tmp.patch  dconf-thread-name.patch  desktop-file-utils-autogen.patch  dnsmasq-buildsys.patch  dogtail-buildsys.patch  dracut-build-Add-disable-documentation-option.patch  evolution-htmltestreport.patch  exempi-autogen.patch  fontconfig-autogen.patch  fontconfig-test-build.patch  gdm-0001-Add-with-default-pam-config-option-autodetect-from-e.patch  gdm-0001-Clean-up-PAM-build-install-rules-move-to-pam-redhat.patch  gdm-0002-Add-with-default-pam-config-option-autodetect-from-e.patch  gdm-0002-Move-gdm-fingerprint-gdm-smartcard-into-pam-redhat.patch  gdm-0003-Respect-split-authentication-build-setting-for-Red-H.patch  gdm-0004-Delete-gdm-password-from-simple-greeter-extensions.patch  gdm-0005-Merge-in-PAM-files-from-Fedora-git-into-pam-redhat.patch  gdm-0006-Add-enable-internal-pam-console-option.patch  geoclue-autogen-Honor-NOCONFIGURE-1.patch  geoclue-builddir.patch  geoclue-pc-file.patch  geoip-bootstrap-use-autoreconf.patch  grubby-buildapi.patch  gtkspell-autogen.patch  hostap-supplicant-Install-systemd-units-if-configured-to-do.patch  ibus-dconf-update.patch  ibus-introspection-syntax.patch  ibus-no-desktop.patch  ipxe-buildsys.patch  ipxe-disable-isos.patch  isc-dhcp-no-conf-file.patch  iscsi-assume-netlink-number.patch  (+46 more)
qa/repoweb/: index.html  repoweb.css  repoweb.js
qa/supybot/GNOMEOSTree/: plugin.py
src/: gnome-ostree-run-triggers  ostbuild-qemu-pull-deploy  ostbuild.in  ostree-build-compile-one  ostree-build-yocto
src/integration/: lib-passwd  os-release
src/js/: argparse.js  buildutil.js  builtin.js  fileutil.js  guestfish.js  jsondb.js  jsonutil.js  libqa.js  main.js  procutil.js  snapshot.js  task.js  vcs.js  versioneddir.js
src/js/builtins/: autobuilder.js  checkout.js  git_mirror.js  make.js  qa_make_disk.js  qa_pull_deploy.js  run_task.js  shell.js  update_indices.js
src/js/tasks/: task-applicationstest.js  task-bdiff.js  task-build.js  task-builddisks.js  task-dummy-delayed.js  task-dummy-resolve.js  task-integrationtest.js  task-memusage.js  task-resolve.js  task-smoketest.js  task-zdisks.js  testbase.js
src/ostbuild/: ostbuild-js.in  ostbuild-qemu-pull-deploy  ostbuild.in  ostree-build-compile-one  ostree-build-yocto
src/ostbuild/js/: argparse.js  autobuilder.js  build.js  buildutil.js  builtin.js  checkout.js  config.js  dyntask.js  git_mirror.js  guestfish.js  jsondb.js  jsonutil.js  libqa.js  main.js  params.js  prefix.js  procutil.js  qemu_pull_deploy.js  resolve.js  snapshot.js  streamutil.js  subtask.js  task.js  vcs.js
src/ostbuild/js/builtins/: autobuilder.js  build.js  build_disks.js  checkout.js  git_mirror.js  make.js  prefix.js  qa_build_disks.js  qa_make_disk.js  qa_pull_deploy.js  qa_smoketest.js  resolve.js  run_task.js  shell.js
src/ostbuild/js/tasks/: task-bdiff.js  task-build.js  task-builddisks.js  task-checksum.js  task-resolve.js  task-smoketest.js
src/ostbuild/pyostbuild/: builtin_build.py  builtin_chroot_compile_one.py  builtin_compile_one.py  builtin_git_mirror.py  builtin_privhelper_deploy_qemu.py  builtin_repoweb_json.py  builtin_resolve.py  builtins.py  main.py  subprocess_helpers.py  vcs.py
src/tests/: gnome-continuous-startstopapps  gnome-ostree-export-journal-to-serialdev.service  gnome-shell-valgrind
src/triggers/: 0008systemd-units.trigger  0020dconf.trigger  0071udev-hwdb.trigger
